--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+        	<div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>IEEE CS GCET TechEdge</h4>
@@ -319,6 +319,45 @@
             </div>
           </div>
 
+        	<div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <img src="assets/img/Genios.jpeg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Genios</h4>
+              <p>An aptitude quiz</p>
+              <a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="App 1"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
+        	<div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <img src="assets/img/Code Eve.jpeg" class="img-fluid" alt="" width="300" height="230">
+            <div class="portfolio-info">
+              <h4>Code Eve</h4>
+              <p>A programming contest in collab with Coding Blocks</p>
+              <a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="App 1"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
+       		<div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <img src="assets/img/404 - ENF Poster.jpeg" class="img-fluid" alt="" width="300" height="300">
+            <div class="portfolio-info">
+              <h4>404 ERROR NOT FOUND</h4>
+              <p>Coding contest</p>
+              <a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="App 1"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <img src="assets/img/DL-Handwritten Digit Classification.jpeg" class="img-fluid" alt="" width="300" height="300">
+            <div class="portfolio-info">
+              <h4>Workshop on Deep Learning</h4>
+              <p>In collab with Coding Blocks</p>
+              <a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="App 1"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
      
         </div>
 
@@ -385,7 +424,7 @@
                  
               </div>
               <div class="member-info">
-                <h4>Abhsihek B</h4>
+                <h4>Abhishek B</h4>
                 <span>Vice Chairperson (Technical,R&D)</span>
               </div>
             </div>
